brat/test/golden/imports/non-existent1.brat.golden
Error in non-existent1@FC {start = Pos {line = 1, col = 16}, end = Pos {line = 1, col = 17}}:
import lib (x, a)
               ^

  Symbol `a` not found in `lib`

