brat/test/golden/imports/non-existent1.brat
import lib (x, a)

main :: Nat
main = x